--- a/homework/build.gradle
+++ b/homework/build.gradle
@@ -13,13 +13,20 @@ subprojects{
     }
 
     dependencies{
+        compile group: 'org.springframework', name: 'spring-context', version: '5.1.3.RELEASE'
+        compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
+
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
 }
 
 project('homework_1'){
+    /*dependencies{
+    }*/
+}
+
+project('homework_2'){
     dependencies{
-        compile group: 'org.springframework', name: 'spring-context', version: '5.1.3.RELEASE'
-        compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
+        compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.2'
     }
 }
