--- a/homework/build.gradle
+++ b/homework/build.gradle
@@ -15,8 +15,12 @@ subprojects{
     dependencies{
         compile group: 'org.springframework', name: 'spring-context', version: '5.1.3.RELEASE'
         compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
+        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.2'
 
         testCompile group: 'junit', name: 'junit', version: '4.12'
+        testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.3.RELEASE'
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.2'
     }
 }
 
@@ -28,5 +32,6 @@ project('homework_1'){
 project('homework_2'){
     dependencies{
         compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.2'
+        compile group: 'aspectj', name: 'aspectjrt', version: '1.5.4'
     }
 }
