--- a/homework/build.gradle
+++ b/homework/build.gradle
@@ -17,10 +17,13 @@ subprojects{
         compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
         compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
         compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.2'
+        compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.2'
+        compile group: 'aspectj', name: 'aspectjrt', version: '1.5.4'
 
         testCompile group: 'junit', name: 'junit', version: '4.12'
-        testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.3.RELEASE'
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.2'
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.2'
+        testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.3.RELEASE'
     }
 }
 
@@ -30,8 +33,17 @@ project('homework_1'){
 }
 
 project('homework_2'){
+    /*dependencies{
+    }*/
+}
+
+project('homework_3'){
     dependencies{
-        compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.2'
-        compile group: 'aspectj', name: 'aspectjrt', version: '1.5.4'
+        compile group: 'org.springframework.boot', name: 'spring-boot-maven-plugin', version: '2.1.1.RELEASE'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.1.1.RELEASE'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.1.RELEASE'
+
+        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.1.RELEASE'
+        testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.4'
     }
 }
