--- a/homework/build.gradle
+++ b/homework/build.gradle
@@ -10,12 +10,13 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.1.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.2.RELEASE")
     }
 }
 
 subprojects{
     apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
 
     repositories{
         mavenCentral()
@@ -71,6 +72,34 @@ project('homework_4'){
         compile group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '2.1.1.RELEASE', ext: 'pom'
         compile group: 'org.springframework.shell', name: 'spring-shell-starter', version: '2.0.1.RELEASE'
 
+        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.1.RELEASE'
+        testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.4'
+    }
+}
+
+project('homework_5'){
+
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
+    dependencies{
+        
+        compile("org.springframework.boot:spring-boot-starter")
+        compile("org.springframework.boot:spring-boot-starter-jdbc")
+        compile("org.springframework:spring-jdbc")
+        compile("com.h2database:h2")
+        compile("org.springframework.boot:spring-boot-starter-web")
+
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.1.2.RELEASE'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.1.1.RELEASE'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.1.RELEASE'
+        compile group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '2.1.1.RELEASE', ext: 'pom'
+        compile group: 'org.springframework.shell', name: 'spring-shell-starter', version: '2.0.1.RELEASE'
+        compile group: 'com.h2database', name: 'h2', version: '1.4.197'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.1.2.RELEASE'
+        
+        testCompile("org.springframework.boot:spring-boot-starter-test")
+        testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
         testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.1.RELEASE'
         testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.4'
     }
