--- a/homework/build.gradle
+++ b/homework/build.gradle
@@ -210,3 +210,32 @@ project('homework_9'){
         testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.4'
     }
 }
+
+project('homework_10'){
+
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
+    dependencies{
+
+        compile("org.springframework.boot:spring-boot-starter")
+        compile("org.springframework.boot:spring-boot-starter-web")
+        compile("com.h2database:h2")
+
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
+
+        compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.4.RELEASE'
+        compile group: 'org.webjars', name: 'jquery', version: '3.3.1'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.2.RELEASE'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '2.1.3.RELEASE', ext: 'pom'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.1.1.RELEASE'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.1.RELEASE'
+        compile group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '2.1.1.RELEASE', ext: 'pom'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.3.RELEASE'
+
+        testCompile("org.springframework.boot:spring-boot-starter-test")
+        testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
+        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.1.RELEASE'
+        testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.4'
+    }
+}
